# matsml

./: README.md  pyproject.toml  relnotes.txt  requirements-gpu.txt  requirements.txt  setup.cfg  setup.py  tmp.py
doc/: manual.aux  manual.out  manual.tex  manual.toc
examples/Tm/: checkpoint  model-04.pkl.data-00000-of-00001  model-04.pkl.index  model_learn.py  training.csv
examples/ex1_hoips/: head  hoips_1dest.csv  model-04.pkl.data-00000-of-00001  model-04.pkl.index  model.pkl  model.pkl.data-00000-of-00001  model.pkl.index  model_learn_gpr.py  model_learn_krr.py  model_learn_nn.py  test.csv  training.csv
examples/ex1_moldels/: ex1_models.ipynb  model_gpr.pkl  model_rfr.pkl  model_svr.pkl  test.csv  test_data.csv  train_data.csv  training.csv  xscaler.pkl
examples/ex1_pcm-molecs/: checkpoint  ex1_molecs_pcm.ipynb  fp.csv  matsml_molecs.py  model.pkl  model.pkl.data-00000-of-00001  model.pkl.index  model_gpr.pkl  model_nn.pkl.data-00000-of-00001  model_nn.pkl.index  molecs.tgz  test.csv  training.csv
examples/ex2_crystals/: PRM18_MgSi_structs.tgz  fp.csv  fp_pesm.csv  matsml_crystals.ipynb  matsml_crystals.py  model.pkl.data-00000-of-00001  model.pkl.index  model_gpr.pkl  model_nn.pkl.data-00000-of-00001  model_nn.pkl.index  test.csv  training.csv
examples/ex2_molecs/: ex2_molecs.ipynb  model-04.pkl.data-00000-of-00001  model-04.pkl.index  model_learn_krr.py  model_learn_nn.py  tm.csv  training.csv
examples/ex3_crystals/: ex3_crystals.ipynb
examples/ex3_hoips/: Untitled.ipynb  ex3_hoips.ipynb  hoips_2dest.csv  model.pkl  model.pkl.data-00000-of-00001  model.pkl.index  model_learn_gpr.py  model_learn_krr.py  model_learn_nn.py  model_learn_pnn.py  test.csv  training.csv
examples/ex4_hoips/: ex4_hoips.ipynb
examples/ex4_molecs/: model-04.pkl.data-00000-of-00001  model-04.pkl.index  model_learn.py  training.csv
examples/ex5_supercond1/: data_lambda.csv  ex5_supercond.ipynb
matsml/: __init__.py  data.py  fingerprint.py  fp_optimization.py  io.py  models.py
matsml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: learning.py  plot_mt.py
(+3588 files in other folders)
