[project]
name = "matsml"
version = "1.3.0"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "sklearn",
    "numpy",
    "pandas",
    "keras",
    "tensorflow",
    "tensorflow_probability"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.

include-package-data = true
