[metadata]
name = matsml
version = 0.0.1
author = Huan Tran
author_email = huantd@gmail.com
description = A machine learning toolkit for materials science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/huantd/matsml.git
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 
    Operating System :: OS Independent

[options]
package_dir =
    = matsml
packages = find:
python_requires = >=3.6

[options.packages.find]
where = matsml

